[package]
name = "cronframe"
version = "0.1.1"
authors = ["Antonio Cimino"]
edition = "2021"
description = "A library for creating cron jobs with macros from functions and struct types, with status web server."
repository = "https://github.com/antcim/cronframe"
readme = "README.md"
keywords = ["cron", "cronjob", "cronjobmacro"]
license = "MIT OR Apache-2.0"
exclude = [
    "examples",
    "tests",
]

[dependencies]
syn = {version = "2.0.53", features = ["full"]}
quote = "1.0.35"
cron = "0.12.1"
chrono = "0.4.38"
cronframe_macro = { path = "./cronframe_macro", version = "0.1.0"}
inventory = "0.3.15"
crossbeam-channel = "0.5.12"
rand = "0.8.5"
log4rs = "1.3.0"
log = "0.4.21"
linkme = "0.3.26"
rocket = {version = "0.5.1"}
anyhow = "1.0.86"
toml = "0.8.14"
lazy_static = "1.5.0"
once_cell = "1.19.0"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",       
    "fast-rng",   
    "macro-diagnostics",
]