[package]
name = "cronframe"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = {version = "2.0.53", features = ["full"]}
quote = "1.0.35"
cron = "0.12.1"
chrono = "0.4.38"
cronframe_macro = { path = "./cronframe_macro" }
inventory = "0.3.15"
crossbeam-channel = "0.5.12"
rand = "0.8.5"
lazy_static = "1.4.0"
log4rs = "1.3.0"
log = "0.4.21"
colored = "2.1.0"
linkme = "0.3.26"
rocket = "0.5.1"
anyhow = "1.0.86"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]