[package]
name = "cronframe_macro"
version = "0.1.2"
edition = "2021"
description = "The Macro used in the cronframe crate."
repository = "https://github.com/antcim/cronframe"
readme = "README.md"
keywords = ["cron", "cronjob", "cronjobmacro"]
license = "MIT OR Apache-2.0"

[dependencies]
syn = {version = "2.0.53", features = ["full"]}
quote = "1.0.35"
proc-macro2 = "1.0.84"

[lib]
proc-macro = true
