[package]
name = "cronlib"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = {version = "2.0.53", features = ["full"]}
quote = "1.0.35"
cron = "0.12.1"
chrono = "0.4.38"
cronmacro = { path = "../cronmacro" }
inventory = "0.3.15"
crossbeam-channel = "0.5.12"
rand = "0.8.5"
lazy_static = "1.4.0"
log4rs = "1.3.0"
log = "0.4.21"
colored = "2.1.0"
