[package]
name = "weather_alert"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
cronframe = { path = "../../", version = "0.1.0"}
crossbeam-channel = "0.5.12"
once_cell = "1.19.0"
linkme = "0.3.26"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde_json = "1.0"
chrono = "0.4.38"